created engine cli api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_subdirectory(libboardgame_mcts)
 add_subdirectory(libpentobi_base)
 add_subdirectory(libpentobi_mcts)
 add_subdirectory(examples)
+add_subdirectory(pybind)
 
 if(BUILD_TESTING)
     add_subdirectory(libboardgame_test)
